requiring emails when users get started
