# locksmith/src/controllers/v2/userController.ts
@@ -2,8 +2,7 @@ import { RequestHandler } from 'express'
 import { updateUser } from '../../operations/userOperations'
 
 export const update: RequestHandler = async (request, response) => {
-  const { emailAddress } = request.params
-  const user = await updateUser(emailAddress, request.user!.walletAddress)
+  const user = await updateUser(request.user!.walletAddress, request.body)
 
   if (!user) {
     return response.sendStatus(404)
