# locksmith/src/routes/v2/user.ts
@@ -1,9 +1,9 @@
 import express from 'express'
 import { authenticatedMiddleware } from '../../utils/middlewares/auth'
-import { updateUser } from '../../controllers/userController'
+import { update } from '../../controllers/v2/userController'
 
 const router = express.Router({ mergeParams: true })
 
-router.put('/', authenticatedMiddleware, updateUser)
+router.put('/', authenticatedMiddleware, update)
 
 export default router
